# monocon

./: .gitattributes  .gitignore  README.md  darmon_guide.md  mono_con.h  monocon_chuugoku.h  snippets.md
.new_h/: mono_con.h
.new_h/sample/: mono_con.h  sample.ino
.new_h/spm/: mono_con.h  spm.ino
VSCode-win32-x64-1.118.1/: Code.VisualElementsManifest.xml
VSCode-win32-x64-1.118.1/appx/: code_x64.appx
VSCode-win32-x64-1.118.1/data/: argv.json  keybindings.json
_new_h/sample/: sample.ino
_new_h/spm/: spm.ino
daemon/: Cmakelists.txt  README.md
daemon/src/: Utils.cpp  Utils.h  builder.cpp  builder.h  client_main.cpp  daemon_main.cpp  daemon_state.h  port_scanner.h  stk500v2.cpp
darmon/src/: Utils.cpp  Utils.h  pipe_io.cpp  pipe_io.h
myprac/cd/: cd.ino
myprac/tmp/: monocon_chuugoku.h  tmp.ino
new/: h_manual.md  monocon_chuugoku.h  new.ino
new2/: comment_monocon_chuugoku.h  monocon_chuugoku.h  new2.ino
prac_renc/sample/: mono_con.h  sample.ino
practice/7seg_8/: 7seg_8.ino
r3/mon5/: mon5.ino
r4/mon1/: mon1.ino
r4/mon2/: mon2.ino
r4/mon3/: mon3.ino
r4/mon4/: mon4.ino
r4/mon5/: mon5.ino
r4/mon6/: mon6.ino
r4/mon7/: mon7.ino
r4_2/mon1/: mon1.ino
r7_2/mon2_a/: mon2_a.ino
release/: manual.md  monocon_chuugoku.h  test.ino
sample/: monocon_chuugoku.h  sample.ino
senkou/kadai2/: kadai2.ino
senkou/kadai3/: kadai3.ino
senkou/kadai4/: kadai4.ino
taikai_okayama/r3/: mon5_.ino
tmp/a/: a.ino  mono_con.h
tmp/b/: b.ino
tmp/c/: c.ino  monocon_chuugoku.h
vscode/: arr.bat  start.bat
~ARCHIVE_2026_CHUUGOKU/: snippets.md
(+1127 files in other folders)
